fix benchmark GraphQL generation

--- a/app/benchmark/conf/application.conf
+++ b/app/benchmark/conf/application.conf
@@ -6,4 +6,4 @@ neo4j.user = "neo4j"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
-play.modules.enabled += "stores.StoresModule"
+play.modules.enabled += "stores.BenchmarkStoresModule"
