--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -7,4 +7,4 @@ neo4j.user = "neo4j"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
-play.modules.enabled += "stores.StoresModule"
+play.modules.enabled += "stores.KgStoresModule"
