splitting configuration further

--- a/gui/package.json
+++ b/gui/package.json
@@ -51,9 +51,9 @@
   "license": "Apache-2.0",
   "repository": "https://github.com/tetherless-world/mcs-portal.git",
   "scripts": {
-    "build": "webpack --mode production -p",
+    "build-kg": "webpack --config config/kg/webpack.config.js --mode production -p",
     "generate-benchmark": "graphql-codegen --config src/benchmark/api/graphql-codegen-config.yml && node_modules/.bin/apollo codegen:generate --endpoint http://localhost:9000/api/graphql --target=typescript --includes=src/benchmark/**/*.graphql --tagName=gql --addTypename --globalTypesFile=src/benchmark/api/graphqlGlobalTypes.ts types",
     "generate-kg": "graphql-codegen --config src/kg/api/graphql-codegen-config.yml && node_modules/.bin/apollo codegen:generate --endpoint http://localhost:9000/api/graphql --target=typescript --includes=src/kg/**/*.graphql --tagName=gql --addTypename --globalTypesFile=src/kg/api/graphqlGlobalTypes.ts types",
-    "start": "webpack-dev-server --mode development --hot --info-verbosity verbose --inline"
+    "start-kg": "webpack-dev-server --config config/kg/webpack.config.js --mode development --hot --info-verbosity verbose --inline"
   }
 }
