--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -63,11 +63,12 @@ jobs:
             cp -p -R /tmp/workspace/dist/gui/benchmark app/benchmark/public
             cp -p -R /tmp/workspace/dist/gui/kg app/kg/public
             sbt test playUpdateSecret dist
-            mkdir -p test-reports
-            cp -p -R app/benchmark/target/test-reports test-reports/benchmark-app
-            cp -p -R app/kg/target/test-reports test-reports/kg-app
-            cp -p -R lib/scala/benchmark/target/test-reports test-reports/benchmark-lib
-            cp -p -R lib/scala/kg/target/test-reports test-reports/kg-lib
+            mkdir -p test-reports/app
+            mkdir -p test-reports/lib
+            cp -p -R app/benchmark/target/test-reports test-reports/app/benchmark
+            cp -p -R app/kg/target/test-reports test-reports/app/kg
+            cp -p -R lib/scala/benchmark/target/test-reports test-reports/lib/benchmark
+            cp -p -R lib/scala/kg/target/test-reports test-reports/lib/kg
             mkdir -p ~/dist/app
             cd app/benchmark/target/universal && unzip -qq mcs-benchmark-app*.zip && rm mcs-benchmark-app*.zip && mv mcs-benchmark-app-*-SNAPSHOT ~/dist/app/benchmark
             cd ~/project/app/kg/target/universal && unzip -qq mcs-kg-app*.zip && rm mcs-kg-app*.zip && mv mcs-kg-app-*-SNAPSHOT ~/dist/app/kg
