--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,26 +121,27 @@ workflows:
   kg-app:
     jobs:
       - cypress/install:
-          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "app/kg/test/integration/package.json" }}'
+          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
           requires:
             - scala
-          working_directory: app/kg/test/integration
+          working_directory: integration
           post-steps:
             - slack/status:
                 fail_only: true
       - cypress/run:
           attach-workspace: true
-          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "app/kg/test/integration/package.json" }}'
+          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
           post-steps:
             - store_test_results:
-                path: app/kg/test/integration/results
+                path: integration/results
             - store_artifacts:
-                path: app/kg/test/integration/cypress/screenshots
+                path: integration/cypress/screenshots
             - store_artifacts:
-                path: app/kg/test/integration/cypress/videos
+                path: integration/cypress/videos
             - slack/status
           requires:
             - cypress/install
+          spec: "cypress/integration/kg/*.spec.ts"
           start: |
             pwd
             cp ~/project/.circleci/cypress.json .
@@ -148,7 +149,7 @@ workflows:
             cd ~/dist/app/kg
             bin/mcs-kg-app -DtestIntegration
           wait-on: "http-get://localhost:9000/index.html"
-          working_directory: app/kg/test/integration
+          working_directory: integration
       - kg-app-docker:
           filters:
             branches:
