--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
     container_name: mcs-kg-app
     networks:
       - mcs
+    ports:
+      - 127.0.0.1:8080:80
     restart: unless-stopped
     volumes:
       - ./data:/app/data
