--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,10 +23,10 @@ jobs:
       - run:
           name: Load the database
           command: |
-            bzip2 -dc conf/data/test/kg/edges.csv.bz2 >conf/data/test/kg/edges.csv
-            bzip2 -dc conf/data/test/kg/nodes.csv.bz2 >conf/data/test/kg/nodes.csv
+            bzip2 -dc lib/scala/kg/src/main/resources/data/test/kg/edges.csv.bz2 >lib/scala/kg/src/main/resources/data/test/kg/edges.csv
+            bzip2 -dc lib/scala/kg/src/main/resources/data/test/kg/nodes.csv.bz2 >lib/scala/kg/src/main/resources/data/test/kg/nodes.csv
             # Can't do volume mounts in CircleCI Docker, so have to copy
-            docker cp conf/data/test/kg/ mcs-kg-app:/app/data/import/
+            docker cp lib/scala/kg/src/main/resources/data/test/kg/ mcs-kg-app:/app/data/import/
             script/import-cskg-nodes
             sleep 60
             script/import-cskg-edges
