--- a/gui/package.json
+++ b/gui/package.json
@@ -3,26 +3,17 @@
   "version": "1.0.0",
   "description": "Graphical user interfaces",
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "4.10.1",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.55",
-    "@tetherless-world/twxplore-base": "1.0.11",
+    "@tetherless-world/twxplore-base": "1.0.12",
     "@types/d3": "^5.7.2",
     "@types/mui-datatables": "2.14.2",
-    "@types/qs": "^6.9.2",
-    "@types/react-loader": "2.4.4",
-    "@types/react-router": "^5.1.7",
-    "@types/react-router-dom": "^5.1.5",
     "d3": "^5.16.0",
-    "graphql": "^14.3.1",
-    "mui-datatables": "3.0.1",
-    "qs": "^6.9.4",
-    "react-loader": "2.4.7",
-    "react-router-dom": "^5.1.2"
+    "mui-datatables": "3.0.1"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.2.0",
