update CircleCI configuration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,10 +26,11 @@ jobs:
             bzip2 -dc lib/scala/kg/src/main/resources/data/test/kg/edges.csv.bz2 >lib/scala/kg/src/main/resources/data/test/kg/edges.csv
             bzip2 -dc lib/scala/kg/src/main/resources/data/test/kg/nodes.csv.bz2 >lib/scala/kg/src/main/resources/data/test/kg/nodes.csv
             # Can't do volume mounts in CircleCI Docker, so have to copy
-            docker cp lib/scala/kg/src/main/resources/data/test/kg/ mcs-kg-app:/app/data/import/
-            script/import-cskg-nodes
+            docker cp lib/scala/kg/src/main/resources/data/test/kg/edges.csv.bz2 mcs-kg-app:/app/data/import/kg/legacy/
+            docker cp lib/scala/kg/src/main/resources/data/test/kg/nodes.csv.bz2 mcs-kg-app:/app/data/import/kg/legacy/
+            script/import-legacy-cskg-nodes-csv
             sleep 60
-            script/import-cskg-edges
+            script/import-legacy-cskg-edges-csv
       - run:
           name: Test that the database is loaded
           command: |
