--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,9 @@ jobs:
           command: |
             bzip2 -dc lib/scala/kg/src/main/resources/data/test/kg/kgtk/edges.tsv.bz2 >lib/scala/kg/src/main/resources/data/test/kg/kgtk/cskg.tsv
             # Can't do volume mounts in CircleCI Docker, so have to copy
+            docker exec mcs-kg-app find /app/data/import
             docker cp lib/scala/kg/src/main/resources/data/test/kg/kgtk/cskg.tsv mcs-kg-app:/app/data/import/kg/kgtk/
+            docker exec mcs-kg-app find /app/data/import
             # script/import-kgtk-cskg-tsv
       - run:
           name: Test that the database is loaded
