--- a/app/kg/Dockerfile
+++ b/app/kg/Dockerfile
@@ -39,7 +39,6 @@ COPY /app/kg/docker-entrypoint.sh /
 EXPOSE 80
 
 WORKDIR /app
-RUN mkdir -p /app/data/import/kg/kgtk
-RUN mkdir -p /app/data/import/kg/legacy
+RUN cd /app && mkdir -p data && cd data && mkdir -p import && cd import && mkdir -p kg && cd kg && mkdir -p kgtk && mkdir -p legacy && touch kgtk/.keep && touch legacy/.keep
 
 ENTRYPOINT ["/docker-entrypoint.sh"]
