--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -118,49 +118,49 @@ workflows:
   version: 2
   kg-app:
     jobs:
-#      - cypress/install:
-#          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
-#          requires:
-#            - scala
-#          working_directory: integration
-#          post-steps:
-#            - slack/status:
-#                fail_only: true
-#      - cypress/run:
-#          attach-workspace: true
-#          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
-#          post-steps:
-#            - store_test_results:
-#                path: integration/results
-#            - store_artifacts:
-#                path: integration/cypress/screenshots
-#            - store_artifacts:
-#                path: integration/cypress/videos
-#            - slack/status
-#          requires:
-#            - cypress/install
-#          spec: "cypress/integration/kg/*.spec.ts"
-#          start: |
-#            pwd
-#            cp ~/project/.circleci/cypress.json .
-#            apt-get update && apt-get install -y default-jre
-#            cd ~/dist/app/kg
-#            bin/mcs-kg-app -DtestIntegration
-#          wait-on: "http-get://localhost:9000/index.html"
-#          working_directory: integration
-      - kg-app-docker:
-          filters:
-            branches:
-              only: master
+      - cypress/install:
+          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
+          requires:
+            - scala
+          working_directory: integration
           post-steps:
+            - slack/status:
+                fail_only: true
+      - cypress/run:
+          attach-workspace: true
+          cache-key: 'npm-packages-v2-{{ arch }}-{{ checksum "integration/package.json" }}'
+          post-steps:
+            - store_test_results:
+                path: integration/results
+            - store_artifacts:
+                path: integration/cypress/screenshots
+            - store_artifacts:
+                path: integration/cypress/videos
             - slack/status
-#      - scala:
-#          requires:
-#            - ts
+          requires:
+            - cypress/install
+          spec: "cypress/integration/kg/*.spec.ts"
+          start: |
+            pwd
+            cp ~/project/.circleci/cypress.json .
+            apt-get update && apt-get install -y default-jre
+            cd ~/dist/app/kg
+            bin/mcs-kg-app -DtestIntegration
+          wait-on: "http-get://localhost:9000/index.html"
+          working_directory: integration
+#      - kg-app-docker:
+#          filters:
+#            branches:
+#              only: master
 #          post-steps:
-#            - slack/status:
-#                fail_only: true
-#      - ts:
-#          post-steps:
-#            - slack/status:
-#                fail_only: true
+#            - slack/status
+      - scala:
+          requires:
+            - ts
+          post-steps:
+            - slack/status:
+                fail_only: true
+      - ts:
+          post-steps:
+            - slack/status:
+                fail_only: true
