--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 *.bloop
 /app/kg/data/import/kg/kgtk/*.tsv
 /app/kg/data/import/kg/legacy/*.csv
+/data/kg/*
+!/data/kg/README.md
 node_modules/
 /gui/dist/
 /gui/package-lock.json
