--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -1,5 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
+kgDataDirectoryPath = "/data"
+kgStore = "neo4j"
 neo4j.password = "nC1aB4mji623s2Zs"
 neo4j.uri = "bolt://mcs-neo4j:7687"
 neo4j.user = "neo4j"
