--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       context: .
       dockerfile: app/kg/Dockerfile
     container_name: mcs-kg-app
+    image: tetherlessworld/mcs-kg-app
     networks:
       - mcs
     ports:
