--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,28 +18,12 @@ jobs:
       - run:
           name: Wait for the server to start
           command: |
-            sleep 120
-            docker exec mcs-kg-app curl --retry 10 --retry-connrefused -s http://localhost
-      - run:
-          name: Load the database
-          command: |
-            docker cp lib/scala/kg/src/main/resources/data/test/kg/kgtk/edges.tsv.bz2 mcs-kg-app:/data
-      - run:
-          name: Test that the database is loaded
-          command: |
-            # Copy a file in in order to use -f
-            # If we cat the Cypher into the docker exec then the cypher-shell doesn't print anything.
-            echo "MATCH (n) RETURN COUNT(n);" >test-neo4j.cypher
-            docker cp test-neo4j.cypher mcs-neo4j:/var/lib/neo4j
-            docker exec --interactive mcs-neo4j cypher-shell -u neo4j -p nC1aB4mji623s2Zs --non-interactive -f test-neo4j.cypher
-      - run:
-          name: Test that the user interface is up
-          command: |
+            sleep 60
             docker exec mcs-kg-app curl --retry 10 --retry-connrefused -s http://localhost
       - run:
           name: Push to DockerHub
           command: |
-            docker login -u $DOCKER_ID -p $DOCKER_PASSWORD && docker-compose push app
+            docker login -u $DOCKER_ID -p $DOCKER_PASSWORD && docker-compose push kg-app
   scala:
     docker:
       - image: circleci/openjdk:11
