--- a/gui/package.json
+++ b/gui/package.json
@@ -13,7 +13,9 @@
     "@types/d3": "^5.7.2",
     "@types/mui-datatables": "2.14.2",
     "d3": "^5.16.0",
-    "mui-datatables": "3.0.1"
+    "mui-datatables": "3.0.1",
+    "query-string": "^6.13.1",
+    "use-query-params": "1.1.6"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "1.2.0",
