--- a/app/benchmark/conf/application.conf
+++ b/app/benchmark/conf/application.conf
@@ -7,3 +7,5 @@ play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
 play.modules.enabled += "stores.BenchmarkStoresModule"
+play.modules.enabled += "stores.kg.KgStoresModule"
+
