--- a/gui/package.json
+++ b/gui/package.json
@@ -6,9 +6,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
-    "@material-ui/core": "4.10.1",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.55",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@tetherless-world/twxplore-base": "1.0.12",
     "@types/d3": "^5.7.2",
     "@types/mui-datatables": "2.14.2",
