--- a/gui/package.json
+++ b/gui/package.json
@@ -32,14 +32,14 @@
     "eslint-plugin-react": "^7.19.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "prettier": "^2.0.1",
-    "ts-loader": "^6.2.1",
-    "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "6.1.2",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "webpack-merge": "^4.2.2"
+    "ts-loader": "^8.0.4",
+    "tsconfig-paths-webpack-plugin": "^3.3.0",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.3",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-merge": "^5.2.0"
   },
   "license": "Apache-2.0",
   "repository": "https://github.com/tetherless-world/mcs-apps.git",
