--- a/gui/package.json
+++ b/gui/package.json
@@ -15,6 +15,7 @@
     "d3": "^5.16.0",
     "mui-datatables": "3.5.0",
     "query-string": "^6.13.1",
+    "string-similarity": "^4.0.2",
     "use-query-params": "1.1.6"
   },
   "devDependencies": {
