--- a/app/kg/Dockerfile
+++ b/app/kg/Dockerfile
@@ -15,7 +15,8 @@ COPY /app/kg/app ./app/kg/app
 COPY /app/kg/conf ./app/kg/conf
 COPY /lib/scala ./lib/scala
 COPY /project ./project
-COPY --from=build-gui /build/dist/kg ./public
+COPY --from=build-gui /build/dist/kg ./app/kg/public
+RUN find .
 RUN sbt "project kgApp" playUpdateSecret dist
 
 # Deployment
