--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -1,6 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-kgBaseHref = ${?KG_BASE_HREF}
+baseHref = ${?BASE_HREF}
 kgDataDirectoryPath = "/data"
 kgStore = "neo4j"
 neo4j.password = "nC1aB4mji623s2Zs"
