--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,33 @@ services:
     restart: unless-stopped
     volumes:
       - ./data/kg:/data
+  kg-app-isi:
+    build:
+      args:
+        BASE_HREF: "/mcs-cskg/"
+      context: .
+      dockerfile: app/kg/Dockerfile
+    container_name: mcs-kg-app
+    environment:
+      BASE_HREF: "/mcs-cskg/"
+    image: tetherlessworld/mcs-kg-app
+    networks:
+      - mcs
+    ports:
+      - 0.0.0.0:8383:80
+    restart: unless-stopped
+    volumes:
+      - ./data/kg:/data
+  nginx-isi:
+    build:
+      context: nginx-isi
+      dockerfile: Dockerfile
+    container_name: mcs-nginx-isi
+    networks:
+      - mcs
+    ports:
+      - 127.0.0.1:8081:80
+    restart: unless-stopped
   neo4j:
     container_name: mcs-neo4j
     environment:
