use play.http.context

--- a/app/kg/conf/application.conf
+++ b/app/kg/conf/application.conf
@@ -1,6 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
 
-baseHref = ${?BASE_HREF}
 kgDataDirectoryPath = "/data"
 kgStore = "neo4j"
 neo4j.password = "nC1aB4mji623s2Zs"
@@ -9,4 +8,5 @@ neo4j.user = "neo4j"
 play.filters.enabled += "play.filters.cors.CORSFilter"
 play.filters.disabled += "play.filters.csrf.CSRFFilter"
 play.filters.disabled += "play.filters.hosts.AllowedHostsFilter"
+play.http.context = ${?BASE_HREF}
 play.modules.enabled += "stores.KgStoresModule"
